# rpsl-rs

./: .codespellignore  .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  _typos.toml  deny.toml  flake.nix  justfile  pyproject.toml  rpsl_parser.pyi
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  dependabot.yml
.github/workflows/: CI.yml  benchmark.yml  cargo-release.yml  deny.yml  fuzz.yml  links.yml  maturin-release.yml  publish.yml  release.yml  scorecard.yml  test.yml  verify.yml
benches/: equality.rs  get_values.rs  parse_as3257.rs  parse_as3257_whois_response.rs
doc/benchmark/: README.md
doc/benchmark/RPSL-Parser/: main.pl  run.sh
doc/benchmark/irrdnet_irrd/: main.py  run.sh
doc/benchmark/self/: run.sh
doc/benchmark/whois-rpsl/: AS3257.txt  pom.xml  run.sh
docs/benchmark/: README.md  benchmark.just  graph-spec.json
docs/benchmark/RPSL-Parser/: run.just  run.sh
docs/benchmark/irrdnet_irrd/: main.py  requirements.txt  run.just  run.sh
docs/benchmark/whois-rpsl/: run.just  run.sh
docs/benchmark/whois-rpsl/src/main/java/parser/: TestParser.java
docs/python/: README.md
examples/: print_parsed_as3257.rs  print_parsed_as3257_whois_response.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parse_object.rs
nix/: devshells.nix
src/: attribute.rs  error.rs  lib.rs  object.rs  parser.rs  pyo3.rs  rpsl.rs  spec.rs
src/borrowed/: attribute.rs  object.rs
src/owned/: attribute.rs  object.rs
src/parser/: api.rs  component.rs  core.rs  main.rs  mod.rs  spec.rs
src/rpsl/: attribute.rs  borrowed.rs  common.rs  error.rs  object.rs  owned.rs
src/rpsl/borrowed/: attribute.rs  object.rs
src/rpsl/owned/: attribute.rs  object.rs
tests/: test_display.rs  test_parsing.rs
tests/assets/object/: AS-DACOTEC.txt
tests/property_based/: rpsl_test_types.py  strategies.py  test_parsing.py
tests/python/: strategies.py
