[package]
name = "rpsl-parser"
description = "An RFC 2622 conformant Routing Policy Specification Language (RPSL) parser with a focus on speed and correctness."
version = "0.1.3"
keywords = ["rpsl", "parser", "routing", "policy", "whois"]
categories = ["database"]
edition = "2021"
authors = ["Marvin Vogt <m@rvinvogt.com>"]
license = "MIT"
homepage = "https://github.com/srv6d/rpsl-parser"
repository = "https://github.com/srv6d/rpsl-parser"
readme = "README.md"
exclude = [".devcontainer", ".github", "doc/benchmark/**", "tests/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rpsl_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "7.1.3"
pyo3 = { version = "0.20.0", optional = true }
thiserror = "1.0.50"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "parse_as3257"
harness = false

[[bench]]
name = "parse_as3257_whois_response"
harness = false

[profile.release]
lto = true
strip = true
