[package]
name = "rpsl-rs"
description = "An RFC 2622 conformant Routing Policy Specification Language (RPSL) parser with a focus on speed and correctness."
version = "0.1.3"
keywords = ["rpsl", "parser", "routing", "policy", "whois"]
categories = ["parsing", "database"]
edition = "2021"
authors = ["Marvin Vogt <m@rvinvogt.com>"]
license = "MIT"
homepage = "https://github.com/srv6d/rpsl-rs"
repository = "https://github.com/srv6d/rpsl-rs"
readme = "README.md"
exclude = [".devcontainer", ".github", "doc/benchmark/**", "tests/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rpsl"
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "7.1.3"
thiserror = "1.0.50"

[dev-dependencies]
codspeed-criterion-compat = "2.3.3"
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = "1.4.0"

[[bench]]
name = "parse_as3257"
harness = false

[[bench]]
name = "parse_as3257_whois_response"
harness = false

[profile.release]
lto = true
strip = true

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
