[package]
name = "rpsl-rs"
description = "A Routing Policy Specification Language (RPSL) parser with a focus on speed and correctness."
version = "2.0.0"
keywords = ["rpsl", "parser", "routing", "policy", "whois"]
categories = ["parsing", "database"]
edition = "2021"
authors = ["Marvin Vogt <m@rvinvogt.com>"]
license = "MIT"
homepage = "https://github.com/srv6d/rpsl-rs"
repository = "https://github.com/srv6d/rpsl-rs"
readme = "README.md"
exclude = [".devcontainer", ".github", "doc/benchmark/**", "tests/**"]
# Make sure to also adjust in README and CI
rust-version = "1.80"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "rpsl"
crate-type = ["cdylib", "rlib"]

[dependencies]
winnow = "0.7.10"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }

[dev-dependencies]
codspeed-criterion-compat = "=2.10.1"
criterion = "=0.5.1"
proptest = "=1.6.0"
rstest = "=0.25.0"
serde_json = "=1.0.140"
serde_test = "=1.0.177"

[features]
default = ["simd"]
simd = ["winnow/simd"]
serde = ["dep:serde"]
json = ["serde", "dep:serde_json"]

[[bench]]
name = "parse_as3257"
harness = false

[[bench]]
name = "parse_as3257_whois_response"
harness = false

[[bench]]
name = "equality"
harness = false

[[bench]]
name = "get_values"
harness = false

[profile.release]
lto = true

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
