[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "rpsl-parser"
description = "An RFC 2622 conformant Routing Policy Specification Language (RPSL) parser with a focus on speed and correctness."
authors = [{ name = "Marvin Vogt", email = "m@rvinvogt.com" }]
readme = "docs/python/README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["rpsl", "parser", "routing", "policy", "whois"]

[project.urls]
Repository = "https://github.com/srv6d/rpsl-parser"
Issues = "https://github.com/srv6d/rpsl-parser/issues"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.codespell]
# `crate` - a rust crate
# `nd` - numeric digit unicode category
ignore-words-list = 'crate,nd'
