[package]
name = "rpsl-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rpsl-rs]
path = ".."

[[bin]]
name = "fuzz_parse_object"
path = "fuzz_targets/fuzz_parse_object.rs"
test = false
doc = false
bench = false
